--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -314,6 +314,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i19.i228.image.css:image/base/css*/
+#i228 { opacity: 1; }
+/*#/#*//*#i228.i229.positioning.css:positioning/base/css.2*/
+#i228 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 240px; height: 53px;
+        -ms-transform: translate(0, 0) translate(33px, 177px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(33px, 177px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(33px, 177px) rotate(0deg);
+        transform: translate(0, 0) translate(33px, 177px) rotate(0deg);
+}
 /*#/#*//*#i19.i62.image.css:image/base/css*/
 #i62 { opacity: 1; }
 /*#/#*//*#i62.i63.positioning.css:positioning/base/css.2*/
@@ -322,15 +331,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i19.i78.text.css:text/base/css*/
-#i78 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 18px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i78.i79.positioning.css:positioning/base/css.2*/
-#i78 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 259px; height: 55px;
-        -ms-transform: translate(0, 0) translate(21px, 182px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(21px, 182px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(21px, 182px) rotate(0deg);
-        transform: translate(0, 0) translate(21px, 182px) rotate(0deg);
 }
 /*#/#*//*#i19.i86.image.css:image/base/css*/
 #i86 { opacity: 1; }
@@ -453,14 +453,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i41.i80.text.css:text/base/css*/
-#i80 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 18px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i80.i81.positioning.css:positioning/base/css.2*/
-#i80 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 251px; height: 55px;
-        -ms-transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
+/*#/#*//*#i41.i230.image.css:image/base/css*/
+#i230 { opacity: 1; }
+/*#/#*//*#i230.i231.positioning.css:positioning/base/css.2*/
+#i230 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 247px; height: 53px;
+        -ms-transform: translate(0, 0) translate(30px, 176px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(30px, 176px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(30px, 176px) rotate(0deg);
+        transform: translate(0, 0) translate(30px, 176px) rotate(0deg);
 }
 /*#/#*//*#i41.i94.image.css:image/base/css*/
 #i94 { opacity: 1; }
@@ -579,10 +579,10 @@ url('fonts/') format('svg');
 <div id="i19" class="adf-Panel ">
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
+<!--#/#--><!--#i19.i228.image.html:image/html-->
+<img id="i228" src="https://i.imgur.com/Uhzmmz5.jpg"/>
 <!--#/#--><!--#i19.i62.image.html:image/html-->
 <img id="i62" src="https://i.imgur.com/2sivezF.jpg"/>
-<!--#/#--><!--#i19.i78.text.html:text/html-->
-<div id="i78">Where could you share Puerto de Indias with someone?</div>
 <!--#/#--><!--#i19.i86.image.html:image/html-->
 <img id="i86" src="https://i.imgur.com/y06OszM.png"/>
 <!--#/#--><!--#i19.i134.image.html:image/html-->
@@ -617,9 +617,8 @@ url('fonts/') format('svg');
 <div id="i41" class="adf-Panel ">
     <!--#i41.i42.shape.html:shape/html-->
 <div id="i42"></div>
-<!--#/#--><!--#i41.i80.text.html:text/html-->
-<div id="i80">Feel like sharing?
-Right next to you in Rácket!</div>
+<!--#/#--><!--#i41.i230.image.html:image/html-->
+<img id="i230" src="https://i.imgur.com/W0HmQC5.jpg"/>
 <!--#/#--><!--#i41.i94.image.html:image/html-->
 <img id="i94" src="https://i.imgur.com/pu1eOth.jpg"/>
 <!--#/#--><!--#i41.i184.image.html:image/html-->
@@ -738,7 +737,7 @@ var el = document.getElementById('i172');
 
 el.addEventListener('click', function(e){
     /*#i212.i213.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -773,12 +772,14 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i20.i21.positioning.js:positioning/base/js.2*/
 bmShow('i20');
+/*#/#*//*#i19.i228.image.js:image/base/js*/
+
+/*#/#*//*#i228.i229.positioning.js:positioning/base/js.2*/
+bmShow('i228');
 /*#/#*//*#i19.i62.image.js:image/base/js*/
 
 /*#/#*//*#i62.i63.positioning.js:positioning/base/js.2*/
 bmShow('i62');
-/*#/#*//*#i78.i79.positioning.js:positioning/base/js.2*/
-bmShow('i78');
 /*#/#*//*#i19.i86.image.js:image/base/js*/
 
 /*#/#*//*#i86.i87.positioning.js:positioning/base/js.2*/
@@ -791,7 +792,11 @@ bmShow('i134');
 /* Name: On Click; */
 var el = document.getElementById('i134');
 
-
+el.addEventListener('click', function(e){
+    /*#i136.i137.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -838,7 +843,7 @@ var el = document.getElementById('i148');
 
 el.addEventListener('click', function(e){
     /*#i224.i225.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -881,6 +886,11 @@ bmShow('i68');
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
+el.addEventListener('click', function(e){
+    /*#i186.i187.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -893,7 +903,11 @@ bmShow('i138');
 /* Name: On Click; */
 var el = document.getElementById('i138');
 
-
+el.addEventListener('click', function(e){
+    /*#i140.i141.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -936,8 +950,10 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i42.i43.positioning.js:positioning/base/js.2*/
 bmShow('i42');
-/*#/#*//*#i80.i81.positioning.js:positioning/base/js.2*/
-bmShow('i80');
+/*#/#*//*#i41.i230.image.js:image/base/js*/
+
+/*#/#*//*#i230.i231.positioning.js:positioning/base/js.2*/
+bmShow('i230');
 /*#/#*//*#i41.i94.image.js:image/base/js*/
 
 /*#/#*//*#i94.i95.positioning.js:positioning/base/js.2*/
@@ -954,7 +970,11 @@ bmShow('i142');
 /* Name: On Click; */
 var el = document.getElementById('i142');
 
-
+el.addEventListener('click', function(e){
+    /*#i144.i145.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1001,7 +1021,7 @@ var el = document.getElementById('i168');
 
 el.addEventListener('click', function(e){
     /*#i220.i221.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1107,15 +1127,16 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i19.i228.image.meta:image/meta*/
+name: Uhzmmz5.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i228.i229.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i19.i62.image.meta:image/meta*/
 name: 2sivezF.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i62.i63.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i19.i78.text.meta:text/meta*/
-name: Where could you share Puerto de Indias with someone?; customName: false;
-/*#/#*//*#i78.i79.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i19.i86.image.meta:image/meta*/
 name: y06OszM.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -1181,10 +1202,11 @@ data: /*!*/{}/*!*/;
 name: Background;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i41.i80.text.meta:text/meta*/
-name: Feel like sharing? Right next to you in Rácket!; customName: false;
-/*#/#*//*#i80.i81.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+/*#/#*//*#i41.i230.image.meta:image/meta*/
+name: W0HmQC5.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i230.i231.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i41.i94.image.meta:image/meta*/
 name: pu1eOth.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
