--- a/Puerto de Indias/Venetian.html
+++ b/Puerto de Indias/Venetian.html
@@ -2484,7 +2484,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i113.i114.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
