--- a/Office Depot Huawei/FadeBig.html
+++ b/Office Depot Huawei/FadeBig.html
@@ -331,7 +331,7 @@
 
 <body class="tgx">
    
-   <a href= "https://www.officedepot.com.mx/officedepot/en/search/?text=Huawei" target="_blank">
+   <a href= "http://bit.ly/2UpHKB1" target="_blank">
    
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
        
