--- a/Office Depot Huawei/FijoPeq3.html
+++ b/Office Depot Huawei/FijoPeq3.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/Laptop/LAPTOP-HUAWEI-MATEBOOK-D-%28RYZEN-5%2C-14-PULG-%29/p/86482';
+                adfClickTAGUrl = 'http://bit.ly/2UpHKB1';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
