--- a/SmirnoffLulo/ZoomExp300x600.html
+++ b/SmirnoffLulo/ZoomExp300x600.html
@@ -146,7 +146,7 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
- <a href="https://goo.gl/maps/TGdnp7jZk7G2"  target="_blank">
+ <a href="https://goo.gl/maps/TGdnp7jZk7G2"  target="_blank" cursor="pointer">
   
  	 <div class="wrapper size_300x250">
     
