--- a/SmirnoffLulo/ZoomExp300x600.html
+++ b/SmirnoffLulo/ZoomExp300x600.html
@@ -149,6 +149,7 @@ a {text-decoration: none;}
  <a href="https://goo.gl/maps/TGdnp7jZk7G2"  target="_blank" cursor="pointer">
   
  	 <div class="wrapper size_300x250">
+        <a href="https://goo.gl/maps/TGdnp7jZk7G2">
     
 <div class="cta"><a href="https://goo.gl/maps/TGdnp7jZk7G2"></a><img style="height: 40px;" src="https://i.imgur.com/TH37Enu.png"></div>
   
