--- a/SmirnoffLulo/ZoomExp300x600.html
+++ b/SmirnoffLulo/ZoomExp300x600.html
@@ -149,9 +149,9 @@ a {text-decoration: none;}
  <a href="https://goo.gl/maps/TGdnp7jZk7G2"  target="_blank" cursor="pointer">
   
  	 <div class="wrapper size_300x250">
-        <a href="https://goo.gl/maps/TGdnp7jZk7G2">
+
     
-<div class="cta"><a href="https://goo.gl/maps/TGdnp7jZk7G2"></a><img style="height: 40px;" src="https://i.imgur.com/TH37Enu.png"></div>
+<div class="cta"><img style="height: 40px;" src="https://i.imgur.com/TH37Enu.png"></div>
   
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 450px; border-radius: none;">
   <ol>
