--- a/KfcSecreto/Video-Geo.html
+++ b/KfcSecreto/Video-Geo.html
@@ -37,8 +37,8 @@
 
 
         .PapaJohnFijo .te-container {
-            width: 320px;
-            height: 480px;
+            width: 318px;
+            height: 478px;
             margin: 0 auto;
             background-color: #fff;
             
@@ -46,11 +46,12 @@
 
         .PapaJohnFijo .te-wrapper {
             position: relative;
-            width: 320px;
-            height: 480px;
+            width: 318px;
+            height: 478px;
             overflow: hidden;
             font-family: Anglecia-Pro-Title-W01-Bold_1;
             background-color: #fff;
+            border: 1px solid #c5c5c5;;
 
         }
 
