--- a/KfcSecreto/Video-Geo.html
+++ b/KfcSecreto/Video-Geo.html
@@ -59,6 +59,7 @@
             
             margin-left: 5px;
             text-align: center;
+            width: 96%;
         }
 
         .PapaJohnFijo .bzm_text_bold,
