--- a/KfcSecreto/Video-Geo.html
+++ b/KfcSecreto/Video-Geo.html
@@ -5,16 +5,11 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="ad.size" content="width=298, height=598" />
-    <link href='https://fonts.googleapis.com/css?family=Trebuchet MS:400,400i,700,700i' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet' type='text/css'>
     <title>Kfc Secreto</title>
     <style>
 
-     @font-face {
-  font-family: 'Anglecia-Pro-Title-W01-Bold_1';
-  src: local('Anglecia-Pro-Title-W01-Bold_1'),
-       url(Anglecia-Pro-Title-W01-Bold_1.woff) format('woff');
-}
-
+   
 
     ::-webkit-scrollbar { 
     display: none; 
@@ -49,7 +44,7 @@
             width: 318px;
             height: 478px;
             overflow: hidden;
-            font-family: Anglecia-Pro-Title-W01-Bold_1;
+            font-family: Arial;
             background-color: #fff;
             border: 1px solid #c5c5c5;;
 
@@ -67,7 +62,7 @@
             line-height: 1;
             text-decoration: none;
             color: #000;
-            font-family: arial;
+            font-family: Arial;
         }
 
         .PapaJohnFijo .bzm_text_bold {
