--- a/KfcSecreto/FadeBig.html
+++ b/KfcSecreto/FadeBig.html
@@ -354,7 +354,7 @@
   
 
 
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: 25px;">
+            <!---<div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: 25px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.facebook.com/KFCMexico/posts/?ref=page_internal"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/uKTGh0I.png" title="compartir en facebook" width="22" /></a>
@@ -365,7 +365,7 @@
                             <a class="shared" href="https://twitter.com/home?status=https://www.facebook.com/KFCMexico/posts/?ref=page_internal" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/9yQ8WAW.png" title="compartir en twitter" width="22" /></a>
                     </span>
-                </div>
+                </div>--->
                 <div class="logo">
                     <img src="https://i.imgur.com/A6ktOCy.png" style="height:50px">
                 </div>
