--- a/KfcSecreto/story-resize.html
+++ b/KfcSecreto/story-resize.html
@@ -358,18 +358,19 @@
                           </a> </span>
 
                         <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b;  margin-top:2px; margin-bottom: -5px; font-size: 14px; line-height: 1.3em; text-align: justify; width:100%;">
-     <i><p></br><b>Los secretos son deliciosos.</b> </br>Desde grupos bloqueados hasta confesiones de gustos culposos, la gente cambió su secreto para probar la Receta Secreta del Coronel.
+     <i><p></br><h2 style="text-align: center;">Los secretos son deliciosos.</h2></br>Desde grupos bloqueados hasta confesiones de gustos culposos, la gente cambió su secreto para probar la Receta Secreta del Coronel.
 </p> <br></i></span> 
 
-               <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b;  margin-top:20px; margin-bottom: -20px; font-size: 14px; line-height: 1.3em; text-align: justify; width:100%;">
+
+  <div style="margin-top: 20px; margin-left: -20px;">               
+          <iframe  src="video3.html" width="307" height="202" frameborder="0" scrolling="no" position="absolute" style="margin-left: -8px; margin-top: -5px;"></iframe></div>
+
+           <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b;  margin-top:8px; margin-bottom: -5px; font-size: 14px; line-height: 1.3em; text-align: justify; width:100%;">
      <i><p></br><b>¡Ven y Comparte el secreto!</b></br>
   <b style="color: red;">Consulta precios y configuraciones en restaurante. </b></p> <br></i></span>
 
-  <div style="margin-top: 20px; margin-left: -20px;">               
-          <iframe  src="video3.html" width="307" height="202" frameborder="0" scrolling="no" position="absolute" style="margin-left: -8px; margin-top: -8px;"></iframe></div>
 
-
-          <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b;  margin-top:10px; margin-bottom: -10px; font-size: 14px; line-height: 1.3em; text-align: justify; width:100%;">
+          <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#red;  margin-top:-5px; margin-bottom: -10px; font-size: 14px; line-height: 1.3em; text-align: justify; width:100%;">
      <i><p></br><b>#ComparteElSecreto con KFC</b></span>
                
 
