--- a/Office Depot Huawei/ZoomExp300x600.html
+++ b/Office Depot Huawei/ZoomExp300x600.html
@@ -156,7 +156,7 @@ a {text-decoration: none;}
 <body class="zoom" style="margin:0px;">
  
  	 <div class="wrapper size_300x250">
-<a href="https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/c/04-039-0-0?q=:relevance:brand:HUAWEI&text=#utm_source=MosaicMedia&utm_medium=Mosaic_NativeAds_Huawei_Laptop&utm_campaign=Mosaic_NativeAds_Huawei_Laptop&utm_term=Paid&utm_content=ODMX"  target="_blank" cursor="pointer">
+<a href="https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/Cómputo/Laptop/c/04-039-0-0?q=:relevance:brand:HUAWEI&text=#utm_source=MosaicMedia&utm_medium=Mosaic_NativeAds_Huawei_Laptop&utm_campaign=Mosaic_NativeAds_Huawei_Laptop&utm_term=Paid&utm_content=ODMX"  target="_blank" cursor="pointer">
     
 <!--<div class="cta"><img style="height: 40px;" src=""></div>-->
   
