--- a/Office Depot Huawei/FadePeq2.html
+++ b/Office Depot Huawei/FadePeq2.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/Laptop/LAPTOP-HUAWEI-MATEBOOK-X-PRO-%28COREI7%2C-13-9-PULG-%29/p/86481';
+                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/Cómputo/Laptop/c/04-039-0-0?q=:relevance:brand:HUAWEI&text=#utm_source=MosaicMedia&utm_medium=Mosaic_NativeAds_Huawei_Laptop&utm_campaign=Mosaic_NativeAds_Huawei_Laptop&utm_term=Paid&utm_content=ODMX';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
