--- a/Creative shell model test/shell.html
+++ b/Creative shell model test/shell.html
@@ -390,11 +390,11 @@
 
     <a id="clickTAG" href="%%c1;cpdir=" target="_blank">
 
-    <div id="i8" class="image"><img src="https://i.imgur.com/kU9WLdy.jpg"></div>
+    <div id="i8" class="image"><img src=""></div>
 
      <div id="i12" class="value_text"> 
             <span class="value_text_title value_text_bold">
-              Conoce la nueva colección
+              
             </span></div>
 
      
