--- a/UVM/ZoomExp300x600.html
+++ b/UVM/ZoomExp300x600.html
@@ -166,7 +166,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/gwolxgh.png">
       
     <li>
-      <img src="hhttps://i.imgur.com/m5C7mti.png">
+      <img src="https://i.imgur.com/m5C7mti.png">
       
     <li>
       <img src="https://i.imgur.com/e1wvFPs.png">
