--- a/Cinemex Platino/hover-text-big3.html
+++ b/Cinemex Platino/hover-text-big3.html
@@ -103,13 +103,13 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/yLdcAWz.gif">
+                <img src="https://i.imgur.com/nNT5dVy.gif">
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/LDRkjLRzVUF2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/9J6vB8x.jpg"> </a></div>
+                <a href="https://goo.gl/maps/LDRkjLRzVUF2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/Fct1d4k.jpg"> </a></div>
 
              
 
