--- a/Office Depot Huawei/FijoPeq2.html
+++ b/Office Depot Huawei/FijoPeq2.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Tablets/Android/TABLET-HUAWEI-T3-AGASSI-W09B-%28PLATA%2C-16-GB%29/p/86480';
+                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Gran-Venta-Nocturna?utm_source=Mosaic&utm_medium=Native_VN&utm_campaign=Venta_Nocturna&utm_term=Paid&utm_content=OD';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
