--- a/office depot/FijoCompleto1.html
+++ b/office depot/FijoCompleto1.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Computadoras-de-Escritorio/Computadoras-y-All-in-One/COMPUTADORA-LENOVO-330-AIO-(AMD,-19-5-PULG-)/p/84731?utm_source=Mosaic&utm_medium=Banner_Logitech&utm_campaign=Logitech_GF&utm_term=Paid&utm_content=OD';
+                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Gran-Venta-Nocturna?utm_source=Mosaic&utm_medium=Native_VN&utm_campaign=Venta_Nocturna&utm_term=Paid&utm_content=OD';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/xOj3vyc.png");
+            background: url("https://i.imgur.com/KjPMPju.jpg");
             background-size: cover;
         }
 
