--- a/OfficeDepotNocturna/fijobig.html
+++ b/OfficeDepotNocturna/fijobig.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/yZcODta.jpg");
+            background: url("https://i.imgur.com/DzsnsNA.jpg");
             background-size: cover;
         }
 
