--- a/Diadelpadre/video300x250.html
+++ b/Diadelpadre/video300x250.html
@@ -272,6 +272,7 @@
 
 <body class="videonew">
     <div class="videonew_wrapper carousel-wrapper size_320x480" id="cta">
+        <a href="https://www.facebook.com/KFCMexico/">
         <div class="carousel-container">
             <div id="ytplayer" onmouseenter="SetYoutubeVolume(true)" onmouseleave="SetYoutubeVolume(false)">
            
