--- a/DelNortePalNorte/Cube.html
+++ b/DelNortePalNorte/Cube.html
@@ -1001,7 +1001,7 @@ var el = document.getElementById('i254');
 
 el.addEventListener('click', function(e){
     /*#i256.i257.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! http://delnortepalnorte.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1126,7 +1126,7 @@ var el = document.getElementById('i220');
 
 el.addEventListener('click', function(e){
     /*#i222.i223.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! http://delnortepalnorte.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
