--- a/DelNortePalNorte/Cube.html
+++ b/DelNortePalNorte/Cube.html
@@ -907,7 +907,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/maIdpYr.png"/>
+<img id="i60" src="https://i.imgur.com/tkqZimR.png"/>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
 <div id="i196">Abrimos de martes a sábado, de 10 am a 6 pm, y los domingos de 10 am a 3 pm.</div>
 <!--#/#--><!--#i6.i242.image.html:image/html-->
