--- a/DelNortePalNorte/FadeBigGeo.html
+++ b/DelNortePalNorte/FadeBigGeo.html
@@ -412,7 +412,7 @@
                 <div  class="map">
                 
 
-                 <span> <a href="https://goo.gl/maps/QxkyVU3G5A92" >  <img src="https://i.imgur.com/UEjqgRj.png"> </span>
+                    <span> <a href="https://goo.gl/maps/QxkyVU3G5A92" >  <img src="https://i.imgur.com/UEjqgRj.png"></a> </span>
         </div>
 
                  <span> <a href="https://goo.gl/maps/QxkyVU3G5A92" >  <img src="https://i.imgur.com/UEjqgRj.png" style="height: 120px; float:left; margin-top:130px, margin-right:-150;"></a> </span>
