--- a/Diadelpadre/video300x250.html
+++ b/Diadelpadre/video300x250.html
@@ -330,7 +330,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title">
-                Seáis como seais, feliz día del.... <b style="color:blue;">amor.</b>
+                Seáis como seáis, feliz día del.... <b style="color:blue;">amor.</b>
             </span>
            
 
