--- a/DelNortePalNorte/Cube.html
+++ b/DelNortePalNorte/Cube.html
@@ -871,7 +871,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Apoco no extraña un chicharrón o carne de La Ramos, o un Topo Chico bien frió?</div>
+<div id="i14">¿A poco no extraña un chicharrón o carne de La Ramos, o un Topo Chico bien frío?</div>
 <!--#/#--><!--#i4.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/QGRxrkT.png"/>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
